local storage are working now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <!--fsjfsiojfisjfjsiojfisjifsj-->
- 
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,13 +19,11 @@
         </div>
       </div>
     </div>
-    <div id="dataContainer"></div>
+    <div id="todo-list"></div>
+    <template id="todo-template">
+      <div class="grid-item"></div>
+    </template>
 
-    <template
-      ><div class="data" id="dataContainer">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div></div
-    ></template>
     <script src="./script.js"></script>
   </body>
 </html>
