--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </div>
     <div id="todo-list"></div>
     <template id="todo-template">
-      <div class="grid-item"></div>
+      <div class="grid-item">
+        <div><h3>hi shivam</h3></div>
+      </div>
     </template>
 
     <script src="./script.js"></script>
